hero bolier code added to index, gallery and media page boiler updated

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- title and tab icon -->
+    <link
+      rel="icon"
+      type="images/x-icon"
+      href="assets/images/Commando-Insignia.jpg"
+    />
+    <title>St Nazaire Raid</title>
+    <!-- Meta tags for search engines -->
+    <meta
+      name="description"
+      content="WW2, France, British, Germans, st nazaire, royal navy"
+    />
+    <meta name="keywords" content="WW2, raid, British, Commando, Raid" />
+    <!-- css stlye sheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header>
+      <a href="index.html">
+        <h1 id="logo"></h1>
+      </a>
+      <!-- nav bar for webiste **mobile** -->
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      <!-- nav bar for webiste -->
+      <nav>
+        <ul id="menu">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="media-links.html">Mutli Media</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- main -->
+    <main>
+      <h1>gallery</h1>
+    </main>
+    <!-- footer -->
+    <footer>
+      <!-- creater details -->
+      <div>
+        <p>created by:</p>
+        <p>giulio montaque</p>
+      </div>
+      <!-- nav bar for webiste -->
+      <nav>
+        <ul id="menu">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="media-links.html">Mutli Media</a></li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
