added content to index page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- header -->
     <header>
       <a href="index.html">
-        <h1 id="logo"></h1>
+        <h1 id="logo">logo</h1>
       </a>
       <!-- nav bar for webiste **mobile** -->
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
@@ -44,6 +44,7 @@
     <main>
       <!-- main top image  -->
       <div class="hero-slider">
+        <h2 hidden>hero images</h2>
         <div class="hero-slider-slide hero-slide-img-1">
           <img src="" alt="" />
         </div>
@@ -61,7 +62,213 @@
             </strong>
           </p>
         </div>
+        <i class="fa-solid fa-circle-arrow-down"></i>
       </div>
+      <article>
+        <h1>The St Nazaire Raid</h1>
+        <section>
+          <h2>Background</h2>
+          <p>
+            Operation Chariot was an audacious Combined Operation raid on the
+            port of St Nazaire in German occupied France. Packed with tons of
+            high explosives, the destroyer, HMS Campbeltown, was rammed into the
+            gates of the only dry dock capable of servicing the German
+            battleship Tirpitz. Such was the damage, the dry dock was rendered
+            unusable for the remainder of the war. In the second week of January
+            1942, the powerful German battleship, Tirpitz, moved from the
+            Baltic, through the Kiel canal and north to Trondheim on the
+            Norwegian coast. From there, it had the potential to break out into
+            the North Atlantic and to wreak havoc on allied Atlantic convoys. C
+            in C Home Fleet, Admiral Tovey, opined that to sink the Tirpitz
+            would be "of incomparably greater importance to the conduct of the
+            war than the safety of any convoy." Churchill shared this view,
+            commenting that "the entire naval situation throughout the world
+            would be altered." Four separate attempts to bomb the Tirpitz
+            failed, with the loss of 12 aircraft. A different strategy was
+            required. The Germans needed dry-dock facilities on the Atlantic
+            coast, before the battleship could be deployed effectively against
+            allied convoys and the only suitable port was St. Nazaire. It lay on
+            the north bank of the River Loire about 6 miles from the river
+            mouth, which itself was about 6 miles wide. The Planning Division in
+            the Admiralty, conceived the idea to destroy the lock gate at St
+            Nazaire which would render the dry dock unusable. The idea was
+            picked up by Captain Charles Lambe (who became First Sea Lord from
+            1959 to 1960). He took the idea to Mountbatten, head of Combined
+            Operations - the first outside client for COHQ. The target area was
+            bordered by the River Loire, the waters of the outer harbour and the
+            Basin of St Nazaire - a total area of less than one square mile. The
+            heavy concentration of enemy defensive positions and troops in the
+            area strongly reflected the importance of the port facilities to
+            them. It was, arguably, the most heavily defended place along the
+            whole of the German occupied Atlantic coast. In this confined space
+            there were power stations, pumping stations, warehouses, lock
+            installations and the old town of St Nazaire. Denying the Germans
+            use of the dry dock would effectively neutralize the threat the
+            Tirpitz posed.
+          </p>
+          <img src="" alt="" />
+        </section>
+        <section>
+          <h2>The Plan</h2>
+          <p>
+            The estuary was a complex mixture of mud flats and channels. A
+            frontal assault would, therefore, need a shallow draught vessel
+            running on a high tide. Although heavily defended, the Germans were
+            unlikely to have considered an attack across the mud flats and
+            shoals. Meticulous planning followed and advice sought on the
+            vagaries of tides and winds, which included studying French nautical
+            charts and tables up to 100 years old! The outline plan was simple.
+            The selected vessel, packed with high explosives in the bow with
+            troops and crew in protected areas, would ram the outer lock gate at
+            speed and become firmly stuck there. They would then disembark and
+            take cover behind a nearby air-raid shelter. The ship would then
+            blow up destroying the gate. A Motor Torpedo Boat would then
+            approach to fire especially designed torpedoes at the inner gate
+            which would collapse under pressure when the tide went out, damaging
+            the submarines berthed in their protected pens. The troops and crew
+            would then destroy as many dockyard targets as they could and
+            withdraw in fast motor launches which had followed them in. All this
+            was to be achieved under cover of an air raid. The planners,
+            themselves, had reservations about the withdrawal phase which was
+            difficult to predict since much depended on the element of surprise
+            and the effectiveness of the opposing forces. However, the risks
+            were less than the potential rewards. Outside the planning circle,
+            the Naval C in C Plymouth, thought the vessel would bounce off the
+            gate, a view he maintained against the advice of the engineer who
+            built it. He also thought that anyone within half a mile of the
+            explosion would be killed. Mountbatten conceded the point about the
+            destructive power of the explosion and delayed action fuses were to
+            be fitted to allow time for the troops and crew to evacuate the
+            area. However, on the question of the use of a boat to ram the lock
+            gate, he held firm. It was also decided to spread the raiding force
+            between the main ship and the supporting motor launches, simply to
+            avoid the total loss of the force in the event of disaster befalling
+            the main ship. HMS Campbeltown, an American lend-lease destroyer
+            (USS Buchanan), was chosen to lead the operation. Her interior was
+            stripped out, the bridge was armour-plated and additional protection
+            provided for the Commandos she would carry. The accompanying motor
+            launches (MLs), were to carry 150 Commandos. The boats were fitted
+            with two Oerlikon 20mm guns and additional fuel tanks to increase
+            their range. As the needs of the raid were reassessed, the ML fleet
+            was increased to 10 and then to 14. Only one motor gun boat (MGB)
+            was available - MGB 314, a C-Class Fairmile, commanded by Lt.
+            Dunstan Curtis. She would lead the attack with motor torpedo boat
+            (MTB) 74 in reserve. This was equipped with unproven flying
+            torpedoes to breach the dry dock gates if the Campbeltown failed to
+            reach its target.
+          </p>
+          <img src="" alt="" />
+        </section>
+        <section>
+          <h2>The Battle</h2>
+          <p>
+            The fleet sailed from Falmouth at 3 pm on the 26th of March. MGB
+            314, was at the head with two escort destroyers flanking the MLs and
+            HMS Campbeltown. South west of Ushant, they came across a U-Boat and
+            damaged it. They departed the area on a false course which the
+            submarine duly reported to their command and control HQ. Five German
+            torpedo boats left St Nazaire to engage the vessels but in entirely
+            the wrong direction. They were still at sea during the raid. Around
+            midnight on the 27/28th March, the raiders saw bomb flashes and
+            tracers light the sky. The diversionary bombing air raid had started
+            but it lacked accuracy due to low cloud causing an alert in the town
+            and its approaches, rather than the intended effect of keeping the
+            German forces in their bunkers. The bombers had been briefed to
+            target only specific military installations to avoid civilian
+            casualties. Those who failed to identify their targets, did not drop
+            their bombs. Each boat flew the German flag to confuse the enemy and
+            delay identification. Submarine, HMS Sturgeon, provided the exact
+            position for entry to the estuary from which the raiding force was
+            to make its run up the estuary. The Campbeltown crept through at 5
+            knots, touching bottom twice. At 0120 hours, search lights
+            illuminated the entire fleet but, for a short time, the Germans were
+            reluctant to open fire possibly because of confusion caused by spoof
+            signals and a general disbelief that such an audacious raid could be
+            undertaken. The German flags were then replaced with White Ensigns
+            when the fleet was still two miles from its target. The Germans
+            responded with intense shelling and gun fire during the final 15
+            minutes of the run in, during which half the men aboard the MLs were
+            either killed or wounded. The Campbeltown cleared the estuary and
+            increased speed to break through the torpedo barrier and into the
+            dock gate. The MLs were all but stopped, only two succeeded in
+            landing their full complement of Commandos. Other MLs approached the
+            landing zones, but were forced to re-embark their Commandos in the
+            face of very heavy fire from 20mm cannons. On shore fighting was
+            ferocious and close quartered. At 0134 hours, Campbeltown was
+            successfully driven at speed into the dock gates just 4 minutes
+            behind schedule. Most of her crew were taken aboard MGB 314 while
+            MTB 74 deployed her delayed action torpedoes in the foundations of
+            the old entrance dock gate. Captain Ryder, CO of the Naval forces,
+            went ashore and satisfied himself that Campbeltown was both scuttled
+            and embedded in the loch gate. At 0230 hours, Ryder decided to
+            withdraw. By this time, more than half of his craft had been
+            destroyed and the remainder were riddled.... if he didn't withdraw
+            soon, he would lose them all. MTB 74, departed the area of action to
+            rendezvous with British destroyers in the open sea off the Loire.
+            She carried 26 men on board and was accompanied by 7 other craft.
+            She stopped to pick up two more survivors, but was hit by accurate
+            shelling from shore batteries. Only 3 of the 34 aboard survived. The
+            remaining craft met the 5 German torpedo boats returning from their
+            fruitless mission. In further enemy fire, more craft were destroyed
+            or scuttled and their crews transferred to the remaining craft. Of
+            the 18 coastal craft, which set out from Falmouth, only four
+            returned.
+          </p>
+          <img src="" alt="" />
+        </section>
+        <section>
+          <h2>Aftermath</h2>
+          <p>
+            The Normandie Dock months after the raid. The wreck of HMS
+            Campbeltown is dwarfed by the size of the dock The explosion put the
+            dry dock out of commission until the end of the war.[69] The St
+            Nazaire raid had been a success, but at a cost. Of the 622 men of
+            the Royal Navy and Commandos who took part in the raid, only 228 men
+            returned to England. Five escaped overland via Spain and Gibraltar.
+            169 men were killed (105 RN and 64 Commandos) and another 215 became
+            prisoners of war (106 RN and 109 Commandos). They were first taken
+            to La Baule and then sent to Stalag 133 at Rennes.[13][49] The
+            fallen British raiders were buried at the Escoublac-la-Baule
+            cemetery with military honors. The cemetery is located 13 kilometres
+            west of St Nazaire. To recognise their achievement, 89 decorations
+            were awarded for the raid. This total includes the five Victoria
+            Crosses awarded to Lieutenant Commander Beattie, Lieutenant Colonel
+            Newman and Commander Ryder, and posthumous awards to Sergeant
+            Durrant and Able Seaman Savage. Other decorations awarded were four
+            Distinguished Service Orders, four Conspicuous Gallantry Medals,
+            five Distinguished Conduct Medals, 17 Distinguished Service Crosses,
+            11 Military Crosses, 24 Distinguished Service Medals and 15 Military
+            Medals. Four men were awarded the Croix de Guerre by France, another
+            51 were mentioned in dispatches.[13][70] Adolf Hitler was furious
+            that the British had been able to sail a flotilla of ships up the
+            Loire unhindered. His immediate reaction was to dismiss
+            Generaloberst Carl Hilpert, chief-of-staff to the Commander in Chief
+            West.[71] The raid refocused German attention on the Atlantic Wall,
+            and special attention was given to ports to prevent any repeat of
+            the raid. By June 1942 the Germans began using concrete to fortify
+            gun emplacements and bunkers in quantities previously only used in
+            U-boat pens. Hitler laid out new plans in a meeting with Armaments
+            Minister Albert Speer in August 1942, calling for the construction
+            of 15,000 bunkers by May 1943 to defend the Atlantic coast from
+            Norway to Spain.[72] The battleship Tirpitz never entered the
+            Atlantic. She remained in Norwegian fjords to threaten Allied
+            shipping until she was destroyed by the RAF on 12 November 1944.
+          </p>
+          <img src="" alt="" />
+        </section>
+        <section>
+          <h2>Legacy</h2>
+          <p>
+            St Nazaire was one of the 38 battle honours presented to the
+            Commandos after the war. The raid has since been called The Greatest
+            Raid of All. The survivors formed their own association, the St
+            Nazaire Society, which is a registered charity in the United
+            Kingdom. A memorial to the raid erected in Falmouth bears the
+            following inscription:
+          </p>
+          <img src="" alt="" />
+        </section>
+      </article>
     </main>
     <!-- footer -->
     <footer>
@@ -79,5 +286,10 @@
         </ul>
       </nav>
     </footer>
+    <!-- fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/f62ecf7247.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
