--- a/media-links.html
+++ b/media-links.html
@@ -43,6 +43,97 @@
     <!-- main -->
     <main>
       <h1>media content</h1>
+      <!-- youtube video documentary -->
+      <label for=""
+        ><a
+          href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
+        >
+          <h4>The Greatest Raid of All</h4>
+        </a></label
+      >
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/07Zd0Oy8JyQ?si=vuq31L7646uaIDDR"
+        title="youtube video of documentary of St Nazaire Raid"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <!-- podcast and books -->
+      <section>
+        <!-- operation chariot book and link -->
+        <figure>
+          <img
+            src="assets/images/the greatest raid - book.jpg"
+            alt="The Greatest Raid: St Nazaire, 1942: The Heroic Story of Operation Chariot"
+            style="width: 100%"
+          />
+          <figcaption>
+            In the darkest months of the Second World War, Churchill approved
+            what seemed to many like a suicide mission. Under orders to attack
+            the St Nazaire U-boat base on the Atlantic seaboard, British
+            commandos undertook "the greatest raid of all", turning an old
+            destroyer into a live bomb and using it to ram the gates of a Nazi
+            stronghold. Five Victoria Crosses were awarded -- more than in any
+            similar operation. Drawing on official documents, interviews,
+            unknown accounts and the astonished reactions of French civilians
+            and German forces, The Greatest Raid recreates in cinematic detail
+            the hours in which the "Charioteers" fought and died, from Lt Gerard
+            Brett, the curator at the V & A, to "Bertie" Burtinshaw, who went
+            into battle humming There'll Always be an England, and from Lt
+            Stuart Chant, who set the fuses with 90 seconds to escape, to the
+            epic solo reconnaissance of the legendary Times journalist Capt
+            Micky Burn. Unearthing the untold human stories of Operation
+            Chariot, Bridge of Spies author Giles Whittell reveals it to be a
+            fundamentally misconceived raid whose impact and legacy was secured
+            by astonishing bravery.
+          </figcaption>
+        </figure>
+        <!-- first hand account podcast -->
+        <div>
+          <label for=""
+            ><a
+              href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
+              target="_blank"
+            >
+              <h4>Lt Col R.K. Montgomery: The St. Nazaire Raid</h4>
+            </a></label
+          >
+          <iframe
+            title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
+            frameborder="0"
+            height="482"
+            scrolling="no"
+            src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
+            width="100%"
+          ></iframe>
+        </div>
+        <!-- into jaws of death book and link -->
+        <figure>
+          <img
+            src="assets/images/Into the Jaws of Death - book.jpg"
+            alt="Into the Jaws of Death: The True Story of the Legendary Raid on Saint-Nazaire"
+            style="width: 100%"
+          />
+          <figcaption>
+            It is the night of 28 March 1942. Royal Navy and British commandos
+            are poised to assault the German-held port of Saint-Nazaire in what
+            will be one of the most audacious and daring raids of the Second
+            World War. The plan is simple: to drive an old destroyer, packed
+            with three tons of explosive, at full speed into the outer gate of
+            the Normandie dock. The aim is to destroy the base from which the
+            formidable battleship Tirpitz would be able to devastate the convoys
+            supplying Britain from the United States. 'Operation Chariot' was to
+            be dramatically successful, but at a great cost. Fewer than half the
+            men who went on the mission returned. In recognition of their
+            valour, eighty-nine decorations were awarded, including five
+            Victoria Crosses. Into the Jaws of Death is the true story of how
+            the decisive courage of a small group of men changed the course of
+            the war.
+          </figcaption>
+        </figure>
+      </section>
     </main>
     <!-- footer -->
     <footer>
