correct nav bar active class and logo on all pages

--- a/media-links.html
+++ b/media-links.html
@@ -23,7 +23,7 @@
     <!-- header -->
     <header>
       <a href="index.html">
-        <h1 id="logo"></h1>
+        <h1 id="logo">logo</h1>
       </a>
       <!-- nav bar for webiste **mobile** -->
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
@@ -33,9 +33,9 @@
       <!-- nav bar for webiste -->
       <nav>
         <ul id="menu">
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" >Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="media-links.html">Mutli Media</a></li>
+          <li><a href="media-links.html" class="active">Mutli Media</a></li>
         </ul>
       </nav>
     </header>
