added further images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -214,11 +214,8 @@
             src="assets/images/german troops next day.jpg"
             style="width: 100%"
           />
-          <img
-            src="assets/images/HMS campbeltown wedged in dock.jpg"
-            style="width: 100%"
-          />
-          <img src="assets/images/HMS Campbeltown.webp" style="width: 100%" />
+          <img src="assets/images/motorboat.jpg" style="width: 100%" />
+          <img src="assets/images/german tirptz.png" style="width: 100%" />
         </div>
       </div>
     </main>
