corrected index written content

--- a/index.html
+++ b/index.html
@@ -221,38 +221,38 @@
           <p>
             The Normandie Dock months after the raid. The wreck of HMS
             Campbeltown is dwarfed by the size of the dock The explosion put the
-            dry dock out of commission until the end of the war.[69] The St
-            Nazaire raid had been a success, but at a cost. Of the 622 men of
-            the Royal Navy and Commandos who took part in the raid, only 228 men
-            returned to England. Five escaped overland via Spain and Gibraltar.
-            169 men were killed (105 RN and 64 Commandos) and another 215 became
+            dry dock out of commission until the end of the war. The St Nazaire
+            raid had been a success, but at a cost. Of the 622 men of the Royal
+            Navy and Commandos who took part in the raid, only 228 men returned
+            to England. Five escaped overland via Spain and Gibraltar. 169 men
+            were killed (105 RN and 64 Commandos) and another 215 became
             prisoners of war (106 RN and 109 Commandos). They were first taken
-            to La Baule and then sent to Stalag 133 at Rennes.[13][49] The
-            fallen British raiders were buried at the Escoublac-la-Baule
-            cemetery with military honors. The cemetery is located 13 kilometres
-            west of St Nazaire. To recognise their achievement, 89 decorations
-            were awarded for the raid. This total includes the five Victoria
-            Crosses awarded to Lieutenant Commander Beattie, Lieutenant Colonel
-            Newman and Commander Ryder, and posthumous awards to Sergeant
-            Durrant and Able Seaman Savage. Other decorations awarded were four
-            Distinguished Service Orders, four Conspicuous Gallantry Medals,
-            five Distinguished Conduct Medals, 17 Distinguished Service Crosses,
-            11 Military Crosses, 24 Distinguished Service Medals and 15 Military
+            to La Baule and then sent to Stalag 133 at Rennes. The fallen
+            British raiders were buried at the Escoublac-la-Baule cemetery with
+            military honors. The cemetery is located 13 kilometres west of St
+            Nazaire. To recognise their achievement, 89 decorations were awarded
+            for the raid. This total includes the five Victoria Crosses awarded
+            to Lieutenant Commander Beattie, Lieutenant Colonel Newman and
+            Commander Ryder, and posthumous awards to Sergeant Durrant and Able
+            Seaman Savage. Other decorations awarded were four Distinguished
+            Service Orders, four Conspicuous Gallantry Medals, five
+            Distinguished Conduct Medals, 17 Distinguished Service Crosses, 11
+            Military Crosses, 24 Distinguished Service Medals and 15 Military
             Medals. Four men were awarded the Croix de Guerre by France, another
-            51 were mentioned in dispatches.[13][70] Adolf Hitler was furious
-            that the British had been able to sail a flotilla of ships up the
-            Loire unhindered. His immediate reaction was to dismiss
-            Generaloberst Carl Hilpert, chief-of-staff to the Commander in Chief
-            West.[71] The raid refocused German attention on the Atlantic Wall,
-            and special attention was given to ports to prevent any repeat of
-            the raid. By June 1942 the Germans began using concrete to fortify
-            gun emplacements and bunkers in quantities previously only used in
+            51 were mentioned in dispatches. Adolf Hitler was furious that the
+            British had been able to sail a flotilla of ships up the Loire
+            unhindered. His immediate reaction was to dismiss Generaloberst Carl
+            Hilpert, chief-of-staff to the Commander in Chief West. The raid
+            refocused German attention on the Atlantic Wall, and special
+            attention was given to ports to prevent any repeat of the raid. By
+            June 1942 the Germans began using concrete to fortify gun
+            emplacements and bunkers in quantities previously only used in
             U-boat pens. Hitler laid out new plans in a meeting with Armaments
             Minister Albert Speer in August 1942, calling for the construction
             of 15,000 bunkers by May 1943 to defend the Atlantic coast from
-            Norway to Spain.[72] The battleship Tirpitz never entered the
-            Atlantic. She remained in Norwegian fjords to threaten Allied
-            shipping until she was destroyed by the RAF on 12 November 1944.
+            Norway to Spain. The battleship Tirpitz never entered the Atlantic.
+            She remained in Norwegian fjords to threaten Allied shipping until
+            she was destroyed by the RAF on 12 November 1944.
           </p>
           <img src="" alt="" />
         </section>
