added images for the hero section at top of page and images for main content of web page

--- a/index.html
+++ b/index.html
@@ -46,10 +46,16 @@
       <div class="hero-slider">
         <h2 hidden>hero images</h2>
         <div class="hero-slider-slide hero-slide-img-1">
-          <img src="" alt="" />
+          <img
+            src="assets/images/st nazaire painting.jpg"
+            alt="HMS Campbeltown at St. Nazaire, by Norman Wilkinson"
+          />
         </div>
         <div class="hero-slider-slide hero-slide-img-2">
-          <img src="" alt="" />
+          <img
+            src="assets/images/HMS Campbeltown hit dock 2.webp"
+            alt="HMS Campbeltown hit dock and german photographed searching boat"
+          />
         </div>
         <div class="hero-slider-slide hero-slide-img-3">
           <img src="" alt="" />
@@ -68,6 +74,7 @@
         <h1>The St Nazaire Raid</h1>
         <section>
           <h2>Background</h2>
+          <img src="assets/images/Tirpitz.jpg" alt="" />
           <p>
             Operation Chariot was an audacious Combined Operation raid on the
             port of St Nazaire in German occupied France. Packed with tons of
@@ -110,6 +117,7 @@
         </section>
         <section>
           <h2>The Plan</h2>
+          <img src="assets/images/detailed map plan.JPG" alt="" />
           <p>
             The estuary was a complex mixture of mud flats and channels. A
             frontal assault would, therefore, need a shallow draught vessel
@@ -161,6 +169,7 @@
         </section>
         <section>
           <h2>The Battle</h2>
+          <img src="assets/images/comando battle plan.JPG" alt="" />
           <p>
             The fleet sailed from Falmouth at 3 pm on the 26th of March. MGB
             314, was at the head with two escort destroyers flanking the MLs and
@@ -258,6 +267,11 @@
         </section>
         <section>
           <h2>Legacy</h2>
+          <img src="assets/images/Operation-Chariot-memorial.webp" alt="" />
+          <img
+            src="assets/images/Operation-Chariot-memorial-closeup.webp"
+            alt=""
+          />
           <p>
             St Nazaire was one of the 38 battle honours presented to the
             Commandos after the war. The raid has since been called The Greatest
