fixed missing favicon link in html pages, added in hero images to index page and content images

--- a/gallery.html
+++ b/gallery.html
@@ -338,5 +338,10 @@
         </ul>
       </nav>
     </footer>
+    <!-- fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/f62ecf7247.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
