--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           />
         </div>
         <div class="hero-slider-slide hero-slide-img-3">
-          <img src="" alt="" />
+          <img src="assets/images/modification to campbeltown.webp" alt="" />
         </div>
         <div id="hero-text">
           <p>
@@ -118,6 +118,7 @@
         <section>
           <h2>The Plan</h2>
           <img src="assets/images/detailed map plan.JPG" alt="" />
+          <img src="assets/images/St-Nazaire-mockup.png" alt="" />
           <p>
             The estuary was a complex mixture of mud flats and channels. A
             frontal assault would, therefore, need a shallow draught vessel
