--- a/media-links.html
+++ b/media-links.html
@@ -44,13 +44,9 @@
     <main>
       <h1>media content</h1>
       <!-- youtube video documentary -->
-      <label for=""
-        ><a
-          href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
-        >
-          <h4>The Greatest Raid of All</h4>
-        </a></label
-      >
+      <label for="">
+        <h4>The Greatest Raid of All</h4>
+      </label>
       <iframe
         width="560"
         height="315"
@@ -151,5 +147,10 @@
         </ul>
       </nav>
     </footer>
+    <!-- fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/f62ecf7247.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
