tocuh up of page titles and hover feature on gallery page images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <i class="fa-solid fa-circle-arrow-down"></i>
       </div>
       <article>
-        <h1>The St Nazaire Raid</h1>
+        <h1>The St Nazaire Raid - Operation Chariot</h1>
         <section>
           <h2>Background</h2>
           <img src="assets/images/Tirpitz.jpg" alt="" />
