checking github publish site

--- a/media-links.html
+++ b/media-links.html
@@ -42,7 +42,7 @@
 
     <!-- main -->
     <main>
-      <h1>media content</h1>
+      <h1>Media Content</h1>
       <!-- youtube video documentary -->
       <label for="">
         <h4>The Greatest Raid of All</h4>
