added basic style to both header and footer on all pages, added alt to img elements and corrected gallery images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <!-- header -->
     <header>
       <a href="index.html">
-        <h1 id="logo">logo</h1>
+        <img
+          src="assets/images/Commando-Insignia.jpg"
+          alt="british commando insignia"
+          id="logo"
+        />
       </a>
       <!-- nav bar for webiste **mobile** -->
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
@@ -32,7 +36,7 @@
       ></label>
       <!-- nav bar for webiste -->
       <nav>
-        <ul id="menu">
+        <ul id="navlinks">
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="media-links.html">Mutli Media</a></li>
@@ -294,7 +298,7 @@
       </div>
       <!-- nav bar for webiste -->
       <nav>
-        <ul id="menu">
+        <ul id="navlinks">
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="media-links.html">Mutli Media</a></li>
