--- a/gallery.html
+++ b/gallery.html
@@ -18,76 +18,16 @@
     <meta name="keywords" content="WW2, raid, British, Commando, Raid" />
     <!-- css stlye sheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0;
-        font-family: Arial;
-      }
-
-      .header {
-        text-align: center;
-        padding: 32px;
-      }
-
-      .row {
-        display: -ms-flexbox; /* IE10 */
-        display: flex;
-        -ms-flex-wrap: wrap; /* IE10 */
-        flex-wrap: wrap;
-        padding: 0 4px;
-      }
-
-      /* Create four equal columns that sits next to each other */
-      .column {
-        -ms-flex: 25%; /* IE10 */
-        flex: 25%;
-        max-width: 25%;
-        padding: 0 4px;
-      }
-
-      .column img {
-        margin-top: 8px;
-        vertical-align: middle;
-        width: 100%;
-      }
-
-      .hide {
-        display: none;
-      }
-
-      .myDIV:hover + .hide {
-        display: block;
-        color: red;
-      }
-
-      /* Responsive layout - makes a two column-layout instead of four columns */
-      @media screen and (max-width: 800px) {
-        .column {
-          -ms-flex: 50%;
-          flex: 50%;
-          max-width: 50%;
-        }
-      }
-
-      /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-      @media screen and (max-width: 600px) {
-        .column {
-          -ms-flex: 100%;
-          flex: 100%;
-          max-width: 100%;
-        }
-      }
-    </style>
   </head>
   <body>
     <!-- header -->
     <header>
       <a href="index.html">
-        <h1 id="logo">logo</h1>
+        <img
+          src="assets/images/Commando-Insignia.jpg"
+          alt="british commando insignia"
+          id="logo"
+        />
       </a>
       <!-- nav bar for webiste **mobile** -->
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
@@ -96,7 +36,7 @@
       ></label>
       <!-- nav bar for webiste -->
       <nav>
-        <ul id="menu">
+        <ul id="navlinks">
           <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html" class="active">Gallery</a></li>
           <li><a href="media-links.html">Mutli Media</a></li>
@@ -126,7 +66,11 @@
           <img src="assets/images/caputred commandos.jpg" style="width: 100%" />
           <!-- vc winner -->
           <div>
-            <img src="assets/images/William Alfred SAVAGE.png" alt="" />
+            <img
+              src="assets/images/William Alfred SAVAGE.png"
+              alt="image of VC winner William Alfred SAVAGE"
+              class="vc-winner"
+            />
             <h3>William Alfred SAVAGE</h3>
             <blockquote
               cite="https://vcgca.org/our-people/profile/1465/william-alfred"
@@ -157,7 +101,11 @@
           />
           <!-- vc winner -->
           <div>
-            <img src="assets/images/Robert Edward Dudley RYDER.png" alt="" />
+            <img
+              src="assets/images/Robert Edward Dudley RYDER.png"
+              alt="vc winner Robert Edward Dudley RYDER"
+              class="vc-winner"
+            />
             <h3>Robert Edward Dudley RYDER</h3>
             <blockquote>
               For great gallantry in the attack on St. Nazaire. He commanded a
@@ -182,7 +130,10 @@
             style="width: 100%"
           />
           <img src="assets/images/HMS Campbeltown.webp" style="width: 100%" />
-          <img src="assets/images/Chalres Newman.webp" style="width: 100%" />
+          <img
+            src="assets/images/Lt-Col-R.K.-Montgomery.webp"
+            style="width: 100%"
+          />
 
           <img src="assets/images/HMS Campbeltown.webp" style="width: 100%" />
         </div>
@@ -198,7 +149,11 @@
             style="width: 100%"
           />
           <div>
-            <img src="assets/images/Chalres Newman.webp" alt="" />
+            <img
+              src="assets/images/Chalres Newman.webp"
+              alt="vc winner Chalres Newman"
+              class="vc-winner"
+            />
             <h3>Augustus Charles NEWMAN</h3>
             <blockquote>
               On the night of 27th/28th March, 1942, Lieutenant-Colonel Newman
@@ -252,7 +207,11 @@
           </div>
           <img src="assets/images/wounded solider.webp" style="width: 100%" />
           <div>
-            <img src="assets/images/Thomas Frank DURRANT.png" alt="" />
+            <img
+              src="assets/images/Thomas Frank DURRANT.png"
+              alt="vc winner Thomas Frank DURRANT.png"
+              class="vc-winner"
+            />
             <h3>Thomas Frank DURRANT</h3>
             <blockquote>
               For great gallantry, skill and devotion to duty when in charge of
@@ -299,7 +258,11 @@
           />
           <img src="assets/images/plan of attack.webp" style="width: 100%" />
           <div>
-            <img src="assets/images/Stephen Halden BEATTIE.png" alt="" />
+            <img
+              src="assets/images/Stephen Halden BEATTIE.png"
+              alt="vc winner Stephen Halden BEATTIE"
+              class="vc-winner"
+            />
             <h3>Stephen Halden BEATTIE</h3>
             <blockquote>
               For great gallantry and determination in the attack on St. Nazaire
@@ -331,7 +294,7 @@
       </div>
       <!-- nav bar for webiste -->
       <nav>
-        <ul id="menu">
+        <ul id="navlinks">
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="media-links.html">Mutli Media</a></li>
