--- a/media-links.html
+++ b/media-links.html
@@ -48,26 +48,53 @@
     <main>
       <h1>Media Content</h1>
       <!-- youtube video documentary -->
-      <label for="">
-        <h4>The Greatest Raid of All</h4>
-      </label>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/07Zd0Oy8JyQ?si=vuq31L7646uaIDDR"
-        title="youtube video of documentary of St Nazaire Raid"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <section class="youtube-documentary">
+        <div class="youtube-documentary-head">
+          <h4>The Greatest Raid of All</h4>
+        </div>
+        <div class="youtube-documentary-video">
+          <iframe
+            src="https://www.youtube.com/embed/07Zd0Oy8JyQ?si=vuq31L7646uaIDDR"
+            title="youtube video of documentary of St Nazaire Raid"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+            id="clarkson-documentary-title"
+          ></iframe>
+        </div>
+      </section>
+
       <!-- podcast and books -->
-      <section>
-        <!-- operation chariot book and link -->
+      <section class="podcast">
+        <!-- first hand account podcast -->
+        <div>
+          <h4 class="podcast-header">
+            <a
+              href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
+              target="_blank"
+            >
+              Lt Col R.K. Montgomery: The St. Nazaire Raid
+            </a>
+          </h4>
+
+          <iframe
+            title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
+            frameborder="0"
+            height="482"
+            scrolling="no"
+            src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
+            width="100%"
+          ></iframe>
+        </div>
+      </section>
+      <!-- operation chariot book and link -->
+      <section class="st-nazaire-books">
+        <h4>Looking for a good book</h4>
         <figure>
           <img
             src="assets/images/the greatest raid - book.jpg"
             alt="The Greatest Raid: St Nazaire, 1942: The Heroic Story of Operation Chariot"
-            style="width: 100%"
+            class="the-greatest-raid"
           />
           <figcaption>
             In the darkest months of the Second World War, Churchill approved
@@ -90,31 +117,12 @@
             by astonishing bravery.
           </figcaption>
         </figure>
-        <!-- first hand account podcast -->
-        <div>
-          <label for=""
-            ><a
-              href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
-              target="_blank"
-            >
-              <h4>Lt Col R.K. Montgomery: The St. Nazaire Raid</h4>
-            </a></label
-          >
-          <iframe
-            title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
-            frameborder="0"
-            height="482"
-            scrolling="no"
-            src="https://playlist.megaphone.fm/?e=FPMN8461578105&light=true&light=true"
-            width="100%"
-          ></iframe>
-        </div>
+
         <!-- into jaws of death book and link -->
         <figure>
           <img
             src="assets/images/Into the Jaws of Death - book.jpg"
             alt="Into the Jaws of Death: The True Story of the Legendary Raid on Saint-Nazaire"
-            style="width: 100%"
           />
           <figcaption>
             It is the night of 28 March 1942. Royal Navy and British commandos
